@@ -69,6 +69,7 @@ private:
     void applyAllInstruments();
     void applyAllMidiCcSettings();
     void applyAudioRecording(bool isPlaying);
+    QString buildAudioFileName() const;
     void applyInstrument(size_t trackIndex, const Instrument & instrument);
     void applyMidiCcSettings(const Instrument & instrument);
     void applyMidiController();
