@@ -9,6 +9,8 @@ New features:
   - Play order is now displayed below the main tool bar
   - Clicking on a position will jump to the position
 
+* Append soloed column names to the audio output filename
+
 Bug fixes:
 
 * Fix incorrect values in the delay calculator dialog
